# pdd_agent

./: .gitignore  README-no-audio-meeting.md  README.md  current_updates.md  main.py  requirements.txt  steps happening in pipelines.md
FrontEnd/: app.py  no_audio_meeting.py
app/: streamlit_app.py
audio/: __init__.py  transcriber.py  video_to_audio.py
core/: __init__.py  config.py  gemini_client.py  token_tracker.py  utils.py  vectordb_client.py
document/: __init__.py  flowchart_renderer.py  pdd_generator.py
llm_tasks/: __init__.py  document_sections.py  entity_extraction.py  flowchart_dot.py  meeting_compact.py  process_steps.py  requirements.py  step_synthesizer.py  system_prompts.py  timestamps.py  vision_describer.py
outputs/: AVENTY Server Patching Automation_PDD.docx  Fisels AD Account Sync Automation_PDD.docx
pdd_no_audio/: __init__.py  config.py  pdd_document.py  sop_agent.py  token_tracker.py  utils.py
pipeline/: __init__.py  audio_pipeline.py  common.py  video_pipeline.py
src/: config.py  flowchart_generator.py  frame_extractor.py  frame_matcher.py  (+7 more)
vectordb_service/: .env.example  README.md  config.py  main.py  pyproject.toml
vectordb_service/api/: dependencies.py
vectordb_service/api/routes/: query.py  video.py
vectordb_service/domain/: models.py
vectordb_service/infrastructure/: bbox_drawer.py  embedding_service.py  frame_extractor.py  gemini_describer.py  gemini_frame_selector.py  omniparser_client.py  omniparser_processor.py  scene_detector.py  vector_store.py
vectordb_service/services/: query_service.py  video_service.py
(+33 files in other folders)
